--- a/AIUBStudent/app/src/main/res/layout/activity_main.xml
+++ b/AIUBStudent/app/src/main/res/layout/activity_main.xml
@@ -6,19 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
 
-     android:fitsSystemWindows="true">
+    android:background="@color/colorAccent"
+    android:fitsSystemWindows="true">
 
-     <FrameLayout
-         android:layout_width="match_parent"
-         android:layout_height="match_parent"
-         android:id="@+id/container"/>
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottom_navigation"
+         />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigation"
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        app:menu="@menu/menu"
         android:background="?android:attr/windowBackground"
-        app:menu="@menu/menu" />
+        />
+
+
 
 </RelativeLayout>
