--- a/AIUBStudent/app/src/main/res/layout/fragment_dashboard.xml
+++ b/AIUBStudent/app/src/main/res/layout/fragment_dashboard.xml
@@ -4,18 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DashboardFragment"
-
-    android:background="@color/colorAccent"
-    android:id="@+id/dashboard">
+    android:background="@android:color/holo_orange_light">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dashboard"
+        android:text="Dashboard fragment"
         android:textSize="30sp"
-        android:textColor="#FFFFFF"/>
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
-
