--- a/AIUBStudent/app/src/main/res/layout/fragment_home.xml
+++ b/AIUBStudent/app/src/main/res/layout/fragment_home.xml
@@ -4,17 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeFragment"
-
-    android:background="@color/colorPrimaryDark"
-    android:id="@+id/home">
+    android:background="@android:color/darker_gray"
+    >
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Home"
+        android:text="Home fragment"
         android:textSize="30sp"
-        android:textColor="#FFFFFF"/>
+        android:layout_centerInParent="true"
+        />
 
 </RelativeLayout>
