--- a/AIUBStudent/app/src/main/res/menu/menu.xml
+++ b/AIUBStudent/app/src/main/res/menu/menu.xml
@@ -2,17 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/home"
-        android:title="Home"
-        android:icon="@drawable/ic_home"/>
+        android:id="@+id/nav_home"
+        android:icon="@drawable/ic_baseline_home_24"
+        android:title="Home"/>
+<item
+        android:id="@+id/nav_dashboard"
+        android:icon="@drawable/ic_baseline_dashboard_24"
+        android:title="Dashboard"/>
+<item
+        android:id="@+id/nav_profile"
+        android:icon="@drawable/ic_baseline_profile_24"
+        android:title="Profile"/>
 
-    <item
-        android:id="@+id/dashboard"
-        android:title="Dashboard"
-        android:icon="@drawable/ic_dashboard"/>
-
-    <item
-        android:id="@+id/search"
-        android:title="Search"
-        android:icon="@drawable/ic_profile"/>
 </menu>
