add app_logo & delete the status bar transparency code

--- a/AIUBStudent/app/src/main/res/values/styles.xml
+++ b/AIUBStudent/app/src/main/res/values/styles.xml
@@ -7,8 +7,8 @@
         <item name="colorAccent">@color/colorAccent</item>
 
         // transparent the status bar and change the color
-        <item name="android:windowTranslucentStatus">true</item>
-        <item name="android:windowLightStatusBar">true</item>
+<!--        <item name="android:windowTranslucentStatus">true</item>-->
+<!--        <item name="android:windowLightStatusBar">true</item>-->
     </style>
 
 </resources>
