--- a/AIUBStudent/app/src/main/res/values/colors.xml
+++ b/AIUBStudent/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#FF5722</color>
     <color name="colorPrimaryDark">#801C1A1E</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="loginPageBackground">#6500BCD4</color>
+    <color name="loginPageBackground">#DFF2FF</color>
 </resources>
