--- a/AIUBStudent/app/src/main/res/layout/activity_login.xml
+++ b/AIUBStudent/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/login_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
@@ -51,7 +51,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView2">
 
         <EditText
-            android:id="@+id/editTextNumber"
+            android:id="@+id/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/id_password_background"
@@ -62,10 +62,10 @@
             android:inputType="phone"
 
             android:padding="8dp"
-            android:textColorHint="#ffffff" />
+            android:textColorHint="@color/white" />
 
         <EditText
-            android:id="@+id/editTextTextPassword"
+            android:id="@+id/password"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginTop="5dp"
@@ -76,7 +76,7 @@
             android:hint="Password"
             android:inputType="textPassword"
             android:padding="8dp"
-            android:textColorHint="#ffffff"
+            android:textColorHint="@color/white"
             android:drawableLeft="@drawable/login_password_icon"/>
 
 
