add circular progress bar in dashboard fragment with gradient color

--- a/AIUBStudent/app/src/main/res/layout/fragment_dashboard.xml
+++ b/AIUBStudent/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,17 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DashboardFragment"
-    android:background="@android:color/holo_orange_light">
+    tools:context=".DashboardFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <ProgressBar
+        android:id="@+id/progressBarBlue"
+        style="@style/circularProgressBarValue"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:progress="90"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
+        android:id="@+id/progressBarTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dashboard fragment"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"/>
+        android:text="90%"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
 
-</RelativeLayout>
+
+        app:layout_constraintBottom_toBottomOf="@+id/progressBarBlue"
+        app:layout_constraintEnd_toEndOf="@+id/progressBarBlue"
+        app:layout_constraintStart_toStartOf="@+id/progressBarBlue"
+        app:layout_constraintTop_toTopOf="@+id/progressBarBlue" />
+
+    <Button
+        android:id="@+id/buttonDecress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="-10%"
+
+        app:layout_constraintStart_toStartOf="@+id/progressBarBlue"
+        app:layout_constraintTop_toBottomOf="@+id/progressBarBlue" />
+
+    <Button
+        android:id="@+id/buttonIncrease"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="+10%"
+
+        app:layout_constraintEnd_toEndOf="@+id/progressBarBlue"
+        app:layout_constraintTop_toBottomOf="@+id/progressBarBlue" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
