make login page full screen and add another circular progress bar in dashboard

--- a/AIUBStudent/app/src/main/res/drawable/circular_progress_bar_blue.xml
+++ b/AIUBStudent/app/src/main/res/drawable/circular_progress_bar_blue.xml
@@ -25,10 +25,11 @@
                 android:shape="ring"
                 android:thickness="10dp"
                 android:useLevel="true">
-                <gradient
-                    android:endColor="@color/circularProgressbarForegroundBlue"
-                    android:startColor="@color/circularProgressbarForegroundGreen"
-                    android:type="sweep" />
+<!--                <gradient-->
+<!--                    android:endColor="@color/circularProgressbarForegroundBlue"-->
+<!--                    android:startColor="@color/circularProgressbarForegroundGreen"-->
+<!--                    android:type="sweep" />-->
+                <solid android:color="@color/circularProgressbarForegroundBlue" />
             </shape>
         </rotate>
     </item>
