--- a/AIUBStudent/app/src/main/res/values/styles.xml
+++ b/AIUBStudent/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/appStatusBarColor</item>
         <item name="colorAccent">@color/colorAccent</item>
 
         // transparent the status bar and change the color
