--- a/AIUBStudent/app/src/main/res/layout/fragment_dashboard.xml
+++ b/AIUBStudent/app/src/main/res/layout/fragment_dashboard.xml
@@ -335,7 +335,7 @@
                     app:layout_constraintGuide_percent="0.5" />
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/RadarButtonCgpa"
                     android:layout_width="120dp"
                     android:layout_height="30dp"
                     android:layout_marginEnd="10dp"
@@ -349,7 +349,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/chart" />
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/RadarButtonCredit"
                     android:layout_width="120dp"
                     android:layout_height="30dp"
                     android:text="CREDIT"
