--- a/AIUBStudent/app/src/main/res/layout/fragment_dashboard.xml
+++ b/AIUBStudent/app/src/main/res/layout/fragment_dashboard.xml
@@ -319,7 +319,7 @@
                 <com.github.mikephil.charting.charts.RadarChart
                     android:id="@+id/chart"
                     android:layout_width="match_parent"
-                    android:layout_height="400dp"
+                    android:layout_height="380dp"
 
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -338,13 +338,14 @@
                     android:id="@+id/RadarButtonCgpa"
                     android:layout_width="120dp"
                     android:layout_height="30dp"
+                    android:layout_marginTop="20dp"
                     android:layout_marginEnd="10dp"
-                    android:background="@drawable/radarchart_button_default"
+                    android:background="@drawable/radarchart_button_pressed"
                     android:stateListAnimator="@null"
                     android:text="CGPA"
+
+
                     android:textSize="12sp"
-
-
                     app:layout_constraintEnd_toStartOf="@+id/guideline2"
                     app:layout_constraintTop_toBottomOf="@+id/chart" />
 
@@ -352,13 +353,14 @@
                     android:id="@+id/RadarButtonCredit"
                     android:layout_width="120dp"
                     android:layout_height="30dp"
-                    android:text="CREDIT"
                     android:layout_marginStart="10dp"
-                    android:background="@drawable/radarchart_button_pressed"
-                    android:textSize="12sp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/radarchart_button_default"
                     android:stateListAnimator="@null"
+                    android:text="CREDIT"
 
 
+                    android:textSize="12sp"
                     app:layout_constraintStart_toStartOf="@+id/guideline2"
                     app:layout_constraintTop_toBottomOf="@+id/chart" />
 
