add new sub fragment for calculate result with some scroll problem

--- a/AIUBStudent/app/src/main/res/layout/fragment_dashboard.xml
+++ b/AIUBStudent/app/src/main/res/layout/fragment_dashboard.xml
@@ -93,7 +93,7 @@
                     app:layout_constraintTop_toTopOf="@+id/progressBarGreen" />
 
                 <ImageView
-                    android:id="@+id/imageView3"
+                    android:id="@+id/calculateCgpaButtonImageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/progressbar_center_image"
@@ -115,10 +115,10 @@
                     android:textColor="@color/circularProgressbarForegroundGreen"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-                    app:layout_constraintEnd_toEndOf="@+id/imageView3"
-                    app:layout_constraintStart_toStartOf="@+id/imageView3"
-                    app:layout_constraintTop_toTopOf="@+id/imageView3" />
+                    app:layout_constraintBottom_toBottomOf="@+id/calculateCgpaButtonImageView"
+                    app:layout_constraintEnd_toEndOf="@+id/calculateCgpaButtonImageView"
+                    app:layout_constraintStart_toStartOf="@+id/calculateCgpaButtonImageView"
+                    app:layout_constraintTop_toTopOf="@+id/calculateCgpaButtonImageView" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
