--- a/AIUBStudent/app/src/main/res/layout/fragment_dashboard.xml
+++ b/AIUBStudent/app/src/main/res/layout/fragment_dashboard.xml
@@ -74,7 +74,7 @@
                     android:layout_width="350dp"
                     android:layout_height="0dp"
 
-                    android:progress="90"
+                    tools:progress="90"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +85,7 @@
                     style="@style/circularProgressBarBlue"
                     android:layout_width="300dp"
                     android:layout_height="300dp"
-                    android:progress="90"
+                    tools:progress="90"
 
                     app:layout_constraintBottom_toBottomOf="@+id/progressBarGreen"
                     app:layout_constraintEnd_toEndOf="@+id/progressBarGreen"
